# CircLab

./: README.md  pyproject.toml
config/: config.yaml
envs/: CIRC2.yaml  CIRI2.yaml  bowtie2_samtools.yaml  fastp.yaml  findcirc.yaml
pipes/: Snakefile
rules/: bowtie2_find_circ.smk  bwa_CIRC.smk  bwa_ciri.smk  gtf2anno.smk  incorporate.smk  quality.smk  star_CIRC.smk
script/: conservation_analysis.py  filter.py  gtf2ano.py  gtfToGenePred.sh  incorporate.py  maxlength.py  split23.py
script/merge/: step1.sh  step2.py  step3.sh  step4.py  step5.py  step5.sh
src/: CircLab.py  conservation.py  detection.py  file_path.py  function.py  miRNA.py  run_annotation.py  visual.py
src/anno/: annotation.R
src/visual/: ClassByType.R  showCodon.R  showJunction.R  showLength.R  showLength_barlot.R  showTissueDistribution.R  visual.R
