[tool.poetry]
name = "circlab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]
include = ["config/*.yaml", "envs/*.yaml", "pipes/*", "rules/*.smk", "script/*"]

[tool.poetry.dependencies]
python = "^3.12"
docopt = "^0.6.2"
snakemake = "^8.10.6"
argparse = "^1.4.0"
biopython = "^1.85"
numpy = "^2.2.4"


[tool.poetry.scripts]
circlab = "src.CircLab:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
